--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,7 @@ body{
 body{
   display: flex;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .container{
@@ -29,7 +29,15 @@ body{
   border-radius: 10px;
   width: 100%;
   max-width: 400px;
-  box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+  border: 2px solid black;
+  margin: 20px 0px;
+
+}
+
+.container:hover{
+  transition-property: all;
+  transition-duration: 1s;
+  box-shadow:0px 0px 16px 0px rgba(66, 68, 90, 1);
 }
 
 .container > h1{
@@ -40,6 +48,7 @@ body{
   display: flex;
   flex-direction: column;
   gap: 10px;
+  
 }
 
 .container div{
